[gd_scene load_steps=9 format=3 uid="uid://c4dyy4kax1ogv"]

[ext_resource type="Texture2D" uid="uid://ompg3iyrakdd" path="res://Art/SkelyBoyParts.png" id="1_sn0oo"]
[ext_resource type="Script" path="res://StateUnit.gd" id="1_x62eg"]
[ext_resource type="Script" path="res://StateMachine.gd" id="2_fiy1u"]
[ext_resource type="Script" path="res://States/EnemyFollow.gd" id="3_3qhkf"]
[ext_resource type="Script" path="res://States/EnemyIdle.gd" id="4_0f0vw"]
[ext_resource type="Script" path="res://States/EnemyAttack.gd" id="6_00by8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pv03d"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5cwag"]
radius = 129.004

[node name="UnitSM" type="CharacterBody2D"]
script = ExtResource("1_x62eg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pv03d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_sn0oo")
region_enabled = true
region_rect = Rect2(38, 0, 21, 29)

[node name="SM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_fiy1u")
initial_state = NodePath("Idle")

[node name="Follow" type="Node" parent="SM" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_3qhkf")
enemy = NodePath("../..")

[node name="Idle" type="Node" parent="SM" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_0f0vw")
enemy = NodePath("../..")

[node name="Attack" type="Node" parent="SM" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_00by8")
enemy = NodePath("../..")
attack_cooldown = 1.0

[node name="SightRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
shape = SubResource("CircleShape2D_5cwag")

[node name="AttackCenter" type="Marker2D" parent="."]

[node name="AttackPoint" type="Marker2D" parent="AttackCenter"]
position = Vector2(22, 0)

[connection signal="Attacked" from="SM/Attack" to="." method="_on_attack_attacked"]
[connection signal="body_entered" from="SightRange" to="SM" method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="SM" method="_on_sight_range_body_exited"]
